--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-9MJKPHD;DataBase=SmartBoard;User Id=sa;Password=12345;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
