correção e banco online TOPZERA NOIS é 10

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-9MJKPHD;DataBase=SmartBoard;User Id=sa;Password=12345;TrustServerCertificate=True"
+    "DefaultConnection": "Server=mssql-175657-0.cloudclusters.net,10020;DataBase=SmartBoard;User Id=Smarters;Password=Asdf1234*;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
