--- a/appsettings.json
+++ b/appsettings.json
@@ -6,8 +6,11 @@
     }
   },
 
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=mssql-175657-0.cloudclusters.net,10020;DataBase=SmartBoard;User Id=Smarters;Password=Asdf1234*;TrustServerCertificate=True"
+  //},
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mssql-175657-0.cloudclusters.net,10020;DataBase=SmartBoard;User Id=Smarters;Password=Asdf1234*;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-9MJKPHD;DataBase=SmartBoard;User Id=sa;Password=12345;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
