--- a/appsettings.json
+++ b/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
 
-  //"ConnectionStrings": {
-  //  "DefaultConnection": "Server=mssql-175657-0.cloudclusters.net,10020;DataBase=SmartBoard;User Id=Smarters;Password=Asdf1234*;TrustServerCertificate=True"
-  //},
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-9MJKPHD;DataBase=SmartBoard;User Id=sa;Password=12345;TrustServerCertificate=True"
+    "DefaultConnection": "Server= mssql-175707-0.cloudclusters.net,15790;DataBase=SmartBoard;User Id=Smarters;Password=Asdf1234*;TrustServerCertificate=True"
   },
+/*   "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-9MJKPHD;DataBase=SmartBoard;User Id=sa;Password=12345;TrustServerCertificate=True"
+  }, */
   "AllowedHosts": "*"
 }
